{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 213,
  "lineage": "2c9d7b60-321c-9baa-1331-e8ab4125828d",
  "resources": [
    {
      "module": "module.network[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009641871443d40a3",
            "route_table_id": "rtb-0269daf93ab8009e1",
            "subnet_id": "subnet-0583c5e652677de8c"
          },
          "dependencies": [
            "module.network.aws_subnet.networks",
            "module.routing.aws_route.igw",
            "module.routing.aws_route_table.route_tables",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06eac2b363f1e1e75",
            "route_table_id": "rtb-09ec2d813fac007b4",
            "subnet_id": "subnet-09760b6be0503fe06"
          },
          "dependencies": [
            "module.network.aws_subnet.networks",
            "module.routing.aws_route.igw",
            "module.routing.aws_route_table.route_tables",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "networks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:800340610043:subnet/subnet-0583c5e652677de8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.18.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0583c5e652677de8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "800340610043",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root-private-1a"
            },
            "tags_all": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root-private-1a"
            },
            "vpc_id": "vpc-0619da92479e6336b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:800340610043:subnet/subnet-09760b6be0503fe06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.19.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09760b6be0503fe06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "800340610043",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root-public-1a"
            },
            "tags_all": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root-public-1a"
            },
            "vpc_id": "vpc-0619da92479e6336b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a86e3dde5ab69d4e",
            "route_table_id": "rtb-0269daf93ab8009e1",
            "subnet_id": "subnet-0c1f71f05116b0436"
          },
          "dependencies": [
            "module.network.aws_subnet.networks",
            "module.routing.aws_route.igw",
            "module.routing.aws_route_table.route_tables",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da259f6ca0678be2",
            "route_table_id": "rtb-09ec2d813fac007b4",
            "subnet_id": "subnet-01d51506a95ebceb3"
          },
          "dependencies": [
            "module.network.aws_subnet.networks",
            "module.routing.aws_route.igw",
            "module.routing.aws_route_table.route_tables",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "networks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:800340610043:subnet/subnet-0c1f71f05116b0436",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.18.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1f71f05116b0436",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "800340610043",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root-private-1b"
            },
            "tags_all": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root-private-1b"
            },
            "vpc_id": "vpc-0619da92479e6336b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:800340610043:subnet/subnet-01d51506a95ebceb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.19.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d51506a95ebceb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "800340610043",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root-public-1b"
            },
            "tags_all": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root-public-1b"
            },
            "vpc_id": "vpc-0619da92479e6336b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[2]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd96084d32d81ca1",
            "route_table_id": "rtb-0269daf93ab8009e1",
            "subnet_id": "subnet-05efbf3c24d557efe"
          },
          "dependencies": [
            "module.network.aws_subnet.networks",
            "module.routing.aws_route.igw",
            "module.routing.aws_route_table.route_tables",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9ee82914b00f848",
            "route_table_id": "rtb-09ec2d813fac007b4",
            "subnet_id": "subnet-0012e8ea2b72c3a93"
          },
          "dependencies": [
            "module.network.aws_subnet.networks",
            "module.routing.aws_route.igw",
            "module.routing.aws_route_table.route_tables",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[2]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "networks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:800340610043:subnet/subnet-05efbf3c24d557efe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.18.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05efbf3c24d557efe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "800340610043",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root-private-1c"
            },
            "tags_all": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root-private-1c"
            },
            "vpc_id": "vpc-0619da92479e6336b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:800340610043:subnet/subnet-0012e8ea2b72c3a93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.19.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0012e8ea2b72c3a93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "800340610043",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root-public-1c"
            },
            "tags_all": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root-public-1c"
            },
            "vpc_id": "vpc-0619da92479e6336b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:800340610043:route-table/rtb-0269daf93ab8009e1",
            "id": "rtb-0269daf93ab8009e1",
            "owner_id": "800340610043",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root-default"
            },
            "tags_all": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0619da92479e6336b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing[1]",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0549ae12834198a0c",
            "id": "r-rtb-09ec2d813fac007b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09ec2d813fac007b4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.routing.aws_route_table.route_tables",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:800340610043:route-table/rtb-09ec2d813fac007b4",
            "id": "rtb-09ec2d813fac007b4",
            "owner_id": "800340610043",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root-public"
            },
            "tags_all": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0619da92479e6336b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:800340610043:internet-gateway/igw-0549ae12834198a0c",
            "id": "igw-0549ae12834198a0c",
            "owner_id": "800340610043",
            "tags": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root"
            },
            "tags_all": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root"
            },
            "vpc_id": "vpc-0619da92479e6336b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:800340610043:vpc/vpc-0619da92479e6336b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06655ef213c7580c2",
            "default_route_table_id": "rtb-0d005bf4f29044ae7",
            "default_security_group_id": "sg-05bab42c76276a2c4",
            "dhcp_options_id": "dopt-63bb9207",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0619da92479e6336b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d005bf4f29044ae7",
            "owner_id": "800340610043",
            "tags": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root"
            },
            "tags_all": {
              "Account": "root",
              "Environment": "dev",
              "Name": "dev-root"
            }
          }
        }
      ]
    }
  ]
}